force-app/main/default/objects/iManageFolder__mdt/iManageFolder__mdt.object-meta.xml
<CustomObject>
    <label>iManageFolder</label>
    <pluralLabel>iManageFolder</pluralLabel>
</CustomObject>