force-app/main/default/objects/iManageFolder__mdt/fields/Folder_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Field_API_Name__c</fullName>
    <label>Folder Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>