force-app/main/default/objects/iManageFolder__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>