force-app/main/default/objects/iManageFolder__mdt/listViews/Admin_View.listView-meta.xml
<ListView>
    <fullName>Admin_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Legacy_ID__c</columns>
    <columns>ObjectName__c</columns>
    <columns>ClientId__c</columns>
    <columns>Folder_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Admin View</label>
</ListView>